src/AppBundle/Resources/public/css/icons.css
@font-face {
	font-family: 'thronesdb';
	src:url('../fonts/arkham-icons.otf?irjt2b');
	src:url('../fonts/arkham-icons.otf?#iefixirjt2b') format('opentype'),
	url('../fonts/arkham-icons.ttf?irjt2b') format('truetype'),
	url('../fonts/arkham-icons.woff?irjt2b') format('woff'),
		url('../fonts/arkham-icons.svg?irjt2b#thronesdb') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^="icon-"], [class*=" icon-"] {
	font-family: 'thronesdb';
	speak: none;
	font-style: normal;
	font-weight: normal;
	font-variant: normal;
	text-transform: none;
	line-height: 1;

	/* Better Font Rendering =========== */
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

.icon-reaction:before {
	content: "!";
}
.icon-fast:before, .icon-free:before {
	content: "j";
}
.icon-eldersign:before, .icon-elder_sign:before {
	content: "o";
}
.icon-lightning:before {
	content: "j";
}
.icon-action:before {
	content: "i";
}
.icon-strength:before, .icon-combat:before {
	content: "c";
}
.icon-agility:before {
	content: "a";
}
.icon-will:before, .icon-willpower:before {
	content: "p";
}
.icon-lore:before, .icon-intellect:before {
	content: "b";
}
.icon-wild:before {
	content: "?";
	font-weight : bold;
	padding-right : 2px;
}
.icon-unique:before {
	content: "s";
	font-size : 1.1em;
}
.icon-elder_thing:before {
	content: "n";
}
.icon-skull:before {
	content: "k";
}
.icon-auto_fail:before {
	content: "m";
}
.icon-cultist:before {
	content: "l";
}
.icon-tablet:before {
	content: "q";
}
.icon-per_investigator:before {
	content: "u";
	vertical-align : top;
	font-size : 12px;
}
.icon-null:before {
	content: "t";
}

.icon-health:before {
	content: "";
	width: 16px;
	height: 16px;
	display: inline-block;
	background-image: url();
}
.icon-sanity:before {
	content: "";
}



.color-will, .color-willpower {
	color : #003961;
}
.color-lore, .color-intellect {
	color : #4e1a45;
}
.color-strength, .color-combat {
	color : #661e09;
}
.color-agility {
	color : #00543a;
}
.color-wild {
	color : #635120;
}

